trunk/Archive2/61/b16d2fc56cb72c/output
main.cpp:146:17: error: unknown type name 'secret_points'; did you mean 'secret_point'?
    std::vector<secret_points> x;
                ^~~~~~~~~~~~~
                secret_point
main.cpp:115:7: note: 'secret_point' declared here
class secret_point
      ^
main.cpp:58:88: error: no member named 'write' in 'simple::serialize<std::vector<secret_point, std::allocator<secret_point> > >'
            serialize< typename boost::fusion::result_of::value_at_c<Class,N>::type >::write(val);
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
main.cpp:70:13: note: in instantiation of member function 'simple::serialize<boost::fusion::extension::adt_attribute_proxy<points, 0, true> >::write_impl' requested here
            write_impl(val,typename boost::fusion::traits::is_sequence<typename boost::fusion::result_of::value_at_c<Class,N>::type>::type());
            ^
main.cpp:81:31: note: in instantiation of member function 'simple::serialize<boost::fusion::extension::adt_attribute_proxy<points, 0, true> >::write' requested here
        simple::serialize<T>::write(v); 
                              ^
/usr/local/include/boost/fusion/algorithm/iteration/detail/for_each.hpp:106:13: note: in instantiation of function template specialization 'serial_out::operator()<boost::fusion::extension::adt_attribute_proxy<points, 0, true> >' requested here
            f(*i0);
            ^
/usr/local/include/boost/fusion/algorithm/iteration/detail/for_each.hpp:125:74: note: in instantiation of function template specialization 'boost::fusion::detail::for_each_unrolled<1>::call<boost::fusion::basic_iterator<boost::fusion::struct_iterator_tag, boost::fusion::random_access_traversal_tag, const points, 0>, serial_out>' requested here
        for_each_unrolled<result_of::distance<begin, end>::type::value>::call(fusion::begin(seq), f);
                                                                         ^
/usr/local/include/boost/fusion/algorithm/iteration/detail/for_each.hpp:132:17: note: in instantiation of function template specialization 'boost::fusion::detail::for_each_dispatch<const points, serial_out>' requested here
        detail::for_each_dispatch(seq, f, typename traits::category_of<Sequence>::type());
                ^
/usr/local/include/boost/fusion/algorithm/iteration/for_each.hpp:49:17: note: in instantiation of function template specialization 'boost::fusion::detail::for_each<const points, serial_out>' requested here
        detail::for_each(seq, f, typename traits::is_segmented<Sequence>::type());
                ^
main.cpp:109:20: note: in instantiation of function template specialization 'boost::fusion::for_each<points, serial_out>' requested here
    boost::fusion::for_each( v, (serial_out()) );
                   ^
main.cpp:161:5: note: in instantiation of function template specialization 'serialize<points>' requested here
    serialize(ps);
    ^
2 errors generated.
